src/components/gallery.css
.gallery {
    overflow-x: hidden;
    position: relative;
    min-height: calc(256px + 64px + 6em + 96px);
    margin-bottom: -32px;
    margin-top: -32px;
}
.gallery-content {
    width: calc(50% - 96px);
    min-height: calc(100% - 96px);
    margin-top: 32px;
    display: inline-flex;
    flex-direction: column;
    position: absolute;
    opacity: 1;
    transition: transform 1s, opacity 1s, box-shadow .2s;
    border-radius: 4px;
}
.gallery-content .card {
  max-height: calc(64px + 6em);
  text-overflow: ellipsis;
  overflow: hidden;
  border-radius: 0 0 4px 4px;
}
.gallery-content .card h4 {
  text-overflow: ellipsis;
}
.gallery-content:hover .card a.card-highlight {
  height: 10px;
}
.gallery-content:active .card a.card-highlight {
  height: 12px;
}
.gallery-content .card::after {
  border-radius: 4px;
  content: "";
  width: 100%;
  height: 32px;
  background-color: var(--color-grey-lightest);
  left: 0;
  bottom: 0;
  z-index: 1;
  position: absolute;
}
.gallery-content:hover {
  box-shadow: var(--shadow-soft-deep);
  cursor: pointer;
}
.gallery-content:active, .gallery-content:focus {
  box-shadow: var(--shadow-soft-shallow);
  outline: none;
}
.gallery-image {
    display: inline-flex;
    height: 256px;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    border-radius: 4px 4px 0 0;
}
.gallery button {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    z-index: 1;
}
.gallery button:first-child {
    left: 0;
}
.gallery button:last-child {
    right: 0;
}

.gallery.skeleton .gallery-image {
  animation: var(--skeleton-animation);
}
.gallery.skeleton button {
  width: 48px;
}

@media (max-width: 1200px) {
  .gallery-content h4 {
    font-size: 1.5em;
  }
  .gallery-content .card {
    max-height: calc(64px + 5em);
  }
  .gallery {
    min-height: calc(256px + 64px + 5em + 96px);
  }
}
@media (max-width: 768px) {
  .gallery .gallery-content {
    width: calc(100% - 128px);
  }
  .gallery .gallery-content:nth-child(4n) {
    opacity: 0 !important;
  }
}
@media (max-width: 480px) {
  .gallery-content h4 {
    font-size: 1em;
  }
  .gallery-content .card {
    max-height: calc(64px + 3em);
  }
  .gallery {
    min-height: calc(256px + 64px + 3em + 96px);
  }
}

